Seems like the earth is not flat after all. Made it use haversine formula to calculate distance between latitude/longitude points.

--- a/README
+++ b/README
@@ -54,5 +54,6 @@ TODO:
  *  Store the measurement data and draw graphs.
  *  Measure the speed for the whole network interface (similar like it was in the
     old version of Tespeed).
+ *  Random data generator uses too much resources.
 
 
